assets/css/style.scss
---
---
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-size: 10px;
  --light-purple-1: #F5EEFD;
  --light-purple-2: #FAF6FE;
  --light-purple-3: #FDFCFF;
  --scrollbar-handle-color: #A99ECD;
  --text-color: #3B1A72;
  --link-color: #6546EA;
}

body {
  background: var(--light-purple-3);
  color: var(--text-color);
  font-family: 'Inter', sans-serif;
  font-size: 1.6rem;
}
body,
#sidebar {
  scrollbar-width: thin;
  scrollbar-color: #9B6AEB var(--light-purple-1);
}
body::-webkit-scrollbar,
#sidebar::-webkit-scrollbar {
  width: 13px;
}
body::-webkit-scrollbar-track,
#sidebar::-webkit-scrollbar-track {
  background: var(--light-purple-1);
}
body::-webkit-scrollbar-thumb,
#sidebar::-webkit-scrollbar-thumb {
  background-color: var(--scrollbar-handle-color);
  border-radius: 10px;
  border: 3px solid var(--light-purple-1);
}

main {
  padding-left: calc(430px + (100vw - 1280px) / 2);
}

.container {
  max-width: 850px;
  /*margin-left: 40px;*/
  padding-left: 55px;
  padding-right: 55px;
}

h1 {
  /*font-family: 'Source Serif Pro', serif;*/
  font-family: 'Inter';
  padding: 60px 30px 40px 15px;
  font-size: 5.5rem;
  font-weight: 800;
}

section {
  margin-bottom: 35px;
}

section:last-child {
  margin-bottom: 0;
}

h2 {
  font-family: 'Source Serif Pro', serif;
  font-size: 3.2rem;
  font-weight: normal;
  padding-top: 25px;
  
  &:first-child {
    padding-top: 0;
  }
}

p {
  line-height: 1.7;
  margin: 18px 0;
}

.markdown-body {
  img {
    width: 100%;
    margin: 16px 0;
  }
}

ul {
  margin: 18px 0;
  padding-inline-start: 40px;
}

li {
  line-height: 1.7;
  margin-bottom: 10px;
}

a {
  color: var(--link-color);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

#sidebar-content {
  margin-left: max(0px, calc((100vw - 1280px) / 2));
  /*margin-right: 30px;*/
  padding: 0 30px;
}
#sidebar {
  display: flex;
  justify-content: flex-end;
  width: calc(430px + (100vw - 1280px) / 2);
  display: flex;
  height: 100%;
  position: fixed;
  background: var(--light-purple-1);
  /*border-right: 1px solid #9B6AEB;*/
  overflow: auto;
}

nav {
  padding-bottom: 50px;
}

nav ul {
  list-style: none;
  padding: 0;
}

nav li {
  max-width: 370px;
  display: block;
  margin: 0;
  padding: 0;
  font-size: 1.8rem;
}

nav li:hover {
  /*background: #fff;*/
}

nav li:hover a {
  /*border-color: #9B6AEB;*/
  border-color: var(--link-color);
  color: var(--link-color);
  text-decoration: none;
}

nav li:hover .navlink-description span {
  color: var(--text-color);
}

nav li a {
  display: flex;
  padding: 15px 15px;
  border: 1px solid transparent;
  color: var(--text-color);
}

nav a.active {
  background: var(--light-purple-3);
}

nav .navlink-image {
  flex-shrink: 0;
  width: 52px;
  height: 52px;
  overflow: hidden;
  margin-right: 15px;
  border-radius: 50%;
}

nav .navlink-image img {
  width: 100%;
}

nav .navlink-description {
  display: flex;
  flex-direction: column;
  justify-content: center;
  line-height: 1.5;
}

nav .navlink-description span {
  font-size: 1.4rem;
  font-family: 'Source Serif Pro';
}

#intro {
  background: #faf5fe;
  padding: 60px 0;
  margin-bottom: 0;
}

#intro .container {
  display: flex;
  align-items: center;
  /*margin: auto;*/
}

#intro img {
  width: 40%;
  margin-left: 3px;
  flex-shrink: 0;
}

#intro-text {
  display: flex;
  flex-direction: column;
  margin-left: 35px;
}

#intro-text h2 {
  font-size: 3rem;
  line-height: 1.4;
  margin-bottom: 50px;
}

#intro-text p {
  max-width: 300px;
  line-height: 1.5;
  margin-bottom: 0;
}

#about-content-wrapper {
  padding-top: 60px;
  padding-bottom: 60px;
}

#project-intro {
  background: var(--light-purple-2);
  padding: 60px 0;

  h2 {
    font-size: 5.5rem;
    margin-bottom: 50px;
    margin-top: 4px;
  }
}

footer {
  background: #fefdff;
  padding: 60px 0;
  text-align: center;
}

footer p {
  margin-bottom: 0;
}

@media (max-width: 765px) {
  #intro .container {
    flex-direction: column;
  }

  #intro img {
    width: 60%;
    margin-bottom: 40px;
  }

  #intro-text {
    margin-left: 0;
  }

  .navlink-description span {
    display: none;
  }
}

